--- a/src/ecommerceComponents/sellerPages/form.css
+++ b/src/ecommerceComponents/sellerPages/form.css
@@ -42,15 +42,27 @@
 }
 
 .form-container button[type="submit"] {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
+
     cursor: pointer;
     font-size: 16px;
+    background: linear-gradient(91.4deg, #2fb8ff 0%, #9eecd9 100%);
+    padding: 12px 0;
+    width: 200px;
+    border: none;
+    border-radius: 30px;
+    color: white;
+    font-weight: bold;
+    font-family: Segoe UI, sans-serif;
+    box-shadow: 0 9px #999;
+
 }
 
 .form-container button[type="submit"]:hover {
     background-color: #45a049;
 }
+
+.form-container button:active {
+    box-shadow: 0 5px rgb(3, 3, 3);
+    transform: translateY(5px);
+  }
+
