--- a/src/ecommerceComponents/individualProductPage/individualProductPage.css
+++ b/src/ecommerceComponents/individualProductPage/individualProductPage.css
@@ -15,8 +15,8 @@
   }
 
   .left-section img {
-    max-width: 100%; /* Set the maximum width of the image to 100% of its container */
-    height: auto; /* Maintain the aspect ratio of the image */
+    width: 300px;
+    height: 500px;
   }
 
   .right-section {
