--- a/src/ecommerceComponents/productCatalogPage/catalog.css
+++ b/src/ecommerceComponents/productCatalogPage/catalog.css
@@ -70,6 +70,12 @@ button.highlight {
     width: 100px;
     height: 36px;
     left: 50px;
+    background-color: #000000;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #FFFFFF;
+    font-weight: 900;
+
 }
 
 .search-container {
