--- a/src/ecommerceComponents/sellerPages/form.css
+++ b/src/ecommerceComponents/sellerPages/form.css
@@ -1,9 +1,3 @@
-/* body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-} */
-
 .form-container {
     max-width: 600px;
     margin: 0 auto;
@@ -29,7 +23,7 @@
 
 .form-container input[type="text"],
 .form-container input[type="email"],
-.form-container input[type="tel"],
+.form-container input[type="url"],
 .form-container input[type="number"],
 .form-container input[type="date"],
 .form-container textarea{
@@ -66,3 +60,7 @@
     transform: translateY(5px);
   }
 
+.form-container .error-message{
+    font-size: small;
+    color: red;
+}
