--- a/src/ecommerceComponents/sellerPages/seller.css
+++ b/src/ecommerceComponents/sellerPages/seller.css
@@ -88,7 +88,7 @@
     box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
 }
 
-.product-table-container .product-delete {
+.product-table-container .product-delete-button {
     background: linear-gradient(to bottom right, #EF4765, #d90404);
     border: 0;
     border-radius: 12px;
@@ -110,15 +110,15 @@
     white-space: nowrap;
 }
 
-.product-table-container .product-delete:not([disabled]):focus {
+.product-table-container .product-delete-button:not([disabled]):focus {
     box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
 }
 
-.product-table-container .product-delete:not([disabled]):hover {
+.product-table-container .product-delete-button:not([disabled]):hover {
     box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
 }
 
-.product-table-container .product-update {
+.product-table-container .product-update-button {
     background-color: #13aa52;
     border: 1px solid #13aa52;
     border-radius: 4px;
@@ -140,7 +140,7 @@
     touch-action: manipulation;
 }
 
-.product-table-container .product-update:hover {
+.product-table-container .product-update-button:hover {
     box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
     transform: translateY(-2px);
 }
