--- a/src/ecommerceComponents/sellerPart/form.css
+++ b/src/ecommerceComponents/sellerPart/form.css
@@ -21,6 +21,9 @@
     margin-bottom: 5px;
 }
 
+.form-container #initial-form-condition{
+    color: red;
+}
 .form-container input[type="text"],
 .form-container input[type="email"],
 .form-container input[type="url"],
