--- a/src/ecommerceComponents/sellerPart/sellerMainPage/sellerMain.css
+++ b/src/ecommerceComponents/sellerPart/sellerMainPage/sellerMain.css
@@ -1,3 +1,10 @@
+.full-seller-main-page{
+    background-image: url("../../e-commerce-background.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+}
+
 #seller-headline-container {
     position: fixed;
     top: 0;
