--- a/src/ecommerceComponents/buyerPart/individualProductPage/productFullDetails.css
+++ b/src/ecommerceComponents/buyerPart/individualProductPage/productFullDetails.css
@@ -12,6 +12,10 @@
     justify-content: center;
     align-items: center;
     background-color: #f0f0f0; /* Example background color for left section */
+    background-image: url("e-commerce-background.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 100%;
   }
 
   .left-section img {
@@ -22,7 +26,7 @@
   .right-section {
     display:flex;
     flex-direction:column;
-    background-color: #e0e0e0; /* Example background color for right section */
+    background-color: #ffff99; /* Example background color for right section */
     padding: 20px; /* Add some padding for spacing */
   }
 
