--- a/src/ecommerceComponents/buyerPart/cartPage/cart.css
+++ b/src/ecommerceComponents/buyerPart/cartPage/cart.css
@@ -1,3 +1,20 @@
+body{
+    background-image: url("e-commerce-background.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
+  
+.cart-table-container {
+    flex: 1;
+    /* This will make sure the table container takes up the remaining space */
+    overflow: auto;
+    /* Enable scrolling if the content overflows */
+}
+
 .centerdiv {
     display: flex;
     justify-content: center;
@@ -6,13 +23,6 @@
 .cart-item-image {
     height: 140px;
     width: 140px;
-}
-
-.cart-page{
-    background-image: url("e-commerce-background.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 100%;
 }
 
 #cart-table {
@@ -53,13 +63,13 @@
 }
 
 #cart-table .product-delete-button:not([disabled]):focus {
-    box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), 
-    -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
+    box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5),
+        -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
 }
 
 #cart-table .product-delete-button:not([disabled]):hover {
-    box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), 
-    -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
+    box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5),
+        -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
 }
 
 #cart-table .checkout-button {
