--- a/src/ecommerceComponents/generalComponents/confirmationModal/deleteModal/deleteModal.css
+++ b/src/ecommerceComponents/generalComponents/confirmationModal/deleteModal/deleteModal.css
@@ -1,49 +1,48 @@
-.overlay{
-    background-color: rgba(178, 190, 181,0.6);
-    position: fixed;
-    width:100%;
-    height: 100%;
-    z-index: 1049;
+.overlay {
+  background-color: rgba(178, 190, 181, 0.6);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 1049;
 }
+
 .delete-confirmation-modal {
-    position: fixed;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #ffffff;
-    border: 1px solid #ccc;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    max-width: 400px;
-    width: 100%;
-    text-align: center;
-    border-radius: 40px;
-    z-index: 1050;
-  }
-  
-  .delete-confirmation-modal p {
-    font-size: 18px;
-    margin-bottom: 20px;
-  }
-  
-  .delete-confirmation-modal button {
-    margin: 0 10px;
-    padding: 8px 16px;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 16px;
-  }
-  
-  .delete-confirmation-modal button#confirm {
-    background-color: #f44336;
-    color: black;
-    border: none;
-  }
-  
-  .delete-confirmation-modal button#cancel {
-    background-color:#232F3E ;
-    color: #FEBD69;
-    border: none;
-  }
-  
-  
+  position: fixed;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  max-width: 400px;
+  width: 100%;
+  text-align: center;
+  border-radius: 40px;
+  z-index: 1050;
+}
+
+.delete-confirmation-modal p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.delete-confirmation-modal button {
+  margin: 0 10px;
+  padding: 8px 16px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 16px;
+}
+
+.delete-confirmation-modal button#confirm {
+  background-color: #f44336;
+  color: black;
+  border: none;
+}
+
+.delete-confirmation-modal button#cancel {
+  background-color: #232F3E;
+  color: #FEBD69;
+  border: none;
+}
