--- a/src/ecommerceComponents/generalComponents/navBar/navBar.css
+++ b/src/ecommerceComponents/generalComponents/navBar/navBar.css
@@ -20,7 +20,7 @@
 .search-container {
     position: relative;
     height: 75px;
-    background-color:#232F3E;
+    background-color: #232F3E;
 }
 
 #search-bar {
@@ -61,10 +61,11 @@
     background-image: url('./homeIcon.png');
     background-size: cover;
     background-color: #232F3E;
-    top:10px;
-    right:1000px;
-    width: 30px; /* Adjust the width and height to fit your icon */
+    top: 10px;
+    right: 1000px;
+    width: 30px;
+    /* Adjust the width and height to fit your icon */
     height: 30px;
-    border: none; /* Remove border if desired */
-  }
-  
+    border: none;
+    /* Remove border if desired */
+}
